# ecg-classification

./: .gitmodules  convert_annotations_generic.py  enn.m  enn_prepare.m  enn_v1.m  knn.m  knn_script.m  knn_vs_enn.m  n_closest_neighbours.m  normalizeData.m  truncate_train_data.m
ReferencyjneDane2/100/: Class_IDs_2.txt  ConvertedQRSRawData_2.txt
ReferencyjneDane2/101/: Class_IDs.txt  ConvertedQRSRawData.txt  ConvertedQRSRawData_2.txt
ReferencyjneDane2/104/: Class_IDs.txt
ReferencyjneDane2/105/: Class_IDs_2.txt
ReferencyjneDane2/106/: Class_IDs.txt  ConvertedQRSRawData.txt
ReferencyjneDane2/112/: ConvertedQRSRawData.txt  ConvertedQRSRawData_2.txt
ReferencyjneDane2/113/: Class_IDs_2.txt
ReferencyjneDane2/118/: Class_IDs_2.txt  annotations.txt
ReferencyjneDane2/119/: Class_IDs_2.txt
ReferencyjneDane2/121/: ConvertedQRSRawData_2.txt
cpp/: .gitignore
cpp/knn-ecg/: .cproject  .gitignore  .project  CMakeLists.txt  README.md  ecg.cpp  enn.cpp  knn.cpp  tester.h
cpp/knn-ecg/algorithm/: ENN.cpp  ENN.h  FileLoader.h  KNN.cpp  KNN.h  NNAlgorithm.h
data/: prepare_data.sh  readme.txt
doc/: K-nearest Neighbour Method of Analysing the ECG Signal (To Find out the Different Disorders Related to Heart).desktop
haibo_he/: ENN.m  ENN_DEMO1.m  Readme.txt  buildWeightedKNNMap.m
matlab/: Knn.m  enn.m  knn.m  knn_vs_enn.asv  knn_vs_enn.m  latex_table.m  normalize_data.m  plot_fcn.m  read_fcn.m  test.m  truncate_train_data.m
raport/: .gitignore  sprawozdanie.aux  sprawozdanie.tex  sprawozdanie.toc
util/: convert_annotations.py  convert_annotations_generic.py
(+612 files in other folders)
